--- a/pages/header.html
+++ b/pages/header.html
@@ -18,10 +18,10 @@
 
 
 <!--Navbar-->
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark primary-color">
+<nav class="navbar navbar-expand-lg navbar-dark primary-color">
 
     <!-- Navbar brand -->
-    <a class="navbar-brand" href="#">DB StudentsHostel</a>
+    <a class="navbar-brand" href="#">StudentsHostel</a>
 
     <!-- Collapse button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
@@ -40,7 +40,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pages/faculties.php">Факультеты</a>
+                <a class="nav-link" href="/pages/faculties.php">Факультеты</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Свободные комнаты</a>
@@ -59,9 +59,9 @@
         </ul>
         <!-- Links -->
 
-        <form class="form-inline">
+        <form class="form-inline" name="searh" method="GET" action="/pages/search.php">
             <div class="md-form my-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                <input name="searh-fio"  class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
             </div>
         </form>
     </div>
@@ -75,13 +75,13 @@
 
 <!-- SCRIPTS -->
 <!-- JQuery -->
-<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
 <!-- Bootstrap tooltips -->
-<script type="text/javascript" src="js/popper.min.js"></script>
+<script type="text/javascript" src="/js/popper.min.js"></script>
 <!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 <!-- MDB core JavaScript -->
-<script type="text/javascript" src="js/mdb.min.js"></script>
+<script type="text/javascript" src="/js/mdb.min.js"></script>
 </body>
 
 </html>
