Add student page added

--- a/pages/header.html
+++ b/pages/header.html
@@ -50,7 +50,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Дополнительные возможности</a>
                 <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Добавить студента</a>
+                    <a class="dropdown-item" href="pages/add-students.php">Добавить студента</a>
                     <a class="dropdown-item" href="#">Выселить студента</a>
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
