--- a/pages/header.html
+++ b/pages/header.html
@@ -16,74 +16,73 @@
     <link href="../css/style.css" rel="stylesheet">
 </head>
 
+<body>
 
-<!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark primary-color">
 
-    <!-- Navbar brand -->
-    <a class="navbar-brand" href="#">StudentsHostel</a>
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark primary-color">
 
-    <!-- Collapse button -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
-            aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+        <!-- Navbar brand -->
+        <a class="navbar-brand" href="#">StudentsHostel</a>
 
-    <!-- Collapsible content -->
-    <div class="collapse navbar-collapse" id="basicExampleNav">
+        <!-- Collapse button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <!-- Links -->
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="../index.php">Студенты
-                    <span class="sr-only">(current)</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/pages/faculties.php">Факультеты</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Свободные комнаты</a>
-            </li>
+        <!-- Collapsible content -->
+        <div class="collapse navbar-collapse" id="basicExampleNav">
 
-            <!-- Dropdown -->
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Дополнительные возможности</a>
-                <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="pages/add-students.php">Добавить студента</a>
-                    <a class="dropdown-item" href="#">Выселить студента</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+            <!-- Links -->
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="../index.php">Студенты
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/faculties.php">Факультеты</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Свободные комнаты</a>
+                </li>
+
+                <!-- Dropdown -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Дополнительные возможности</a>
+                    <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="/pages/add-students.php">Добавить студента</a>
+                        <a class="dropdown-item" href="#">Выселить студента</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+
+            </ul>
+            <!-- Links -->
+
+            <form class="form-inline" name="searh" method="GET" action="/pages/search.php">
+                <div class="md-form my-0">
+                    <input name="searh-fio" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                 </div>
-            </li>
+            </form>
+        </div>
+        <!-- Collapsible content -->
 
-        </ul>
-        <!-- Links -->
-
-        <form class="form-inline" name="searh" method="GET" action="/pages/search.php">
-            <div class="md-form my-0">
-                <input name="searh-fio"  class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            </div>
-        </form>
-    </div>
-    <!-- Collapsible content -->
-
-</nav>
-<!--/.Navbar-->
+    </nav>
+    <!--/.Navbar-->
 
 
 
 
-<!-- SCRIPTS -->
-<!-- JQuery -->
-<script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="/js/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="/js/bootstrap.min.js"></script>
-<!-- MDB core JavaScript -->
-<script type="text/javascript" src="/js/mdb.min.js"></script>
+    <!-- SCRIPTS -->
+    <!-- JQuery -->
+    <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="/js/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="/js/mdb.min.js"></script>
 </body>
 
 </html>
-
-
