Page for delete and move out students added

--- a/pages/header.html
+++ b/pages/header.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="/pages/faculties.php">Факультеты</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Свободные комнаты</a>
+                    <a class="nav-link" href="/pages/free-rooms.php">Свободные комнаты</a>
                 </li>
 
                 <!-- Dropdown -->
@@ -53,7 +53,7 @@
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Дополнительные возможности</a>
                     <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="/pages/add-students.php">Добавить студента</a>
-                        <a class="dropdown-item" href="#">Выселить студента</a>
+                        <a class="dropdown-item" href="/pages/move-out.php">Действия над студетами</a>
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
                 </li>
