--- a/pages/header.html
+++ b/pages/header.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>DB Student Hostel</title>
+    <link rel="shortcut icon" href="/img/Iconshock-Real-Vista-Data-Database.ico">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="../css/style.css" rel="stylesheet">
